--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 
                 <div class="left-section">
                 <div class="social-icons">
-                    <a href="www.linkedin.com/in/tvy-nguyen" target="_blank"><img src="https://cdn3.iconfinder.com/data/icons/feather-5/24/linkedin-1024.png" alt="LinkedIn"></a>
+                    <a href="https://www.linkedin.com/in/tvy-nguyen" target="_blank"><img src="https://cdn3.iconfinder.com/data/icons/feather-5/24/linkedin-1024.png" alt="LinkedIn"></a>
                     <a href="https://github.com/vytngn" target="_blank"><img src="https://cdn0.iconfinder.com/data/icons/eon-social-media-contact-info-2/32/github_coding_dev_developer-1024.png" alt="GitHub"></a>
                     <a href="mailto:vyvtnguyen@gmail.com" target="_blank"><img src="https://cdn0.iconfinder.com/data/icons/eon-social-media-contact-info-2/32/mail_email_e-mail_letter-1024.png" alt="Email"></a>
                 </div>
